syntax = "proto3";

package ArmyAntMessage.SubApps;

import "ArmyAntMessage/Common/base.proto";

// appid : 1010

enum HuolongGameType {
	Huolong = 0;
	Doudizhu = 1;
	Zhuohongsan = 2;
}

enum HuolongStatus {
	Invalid = 0;
	Idle = 1;
	FirstRoundDiscarding = 2;
	ThrowingLast = 3;
	AskingForGetstar = 4;
	Running = 5;
	RoundReporting = 6;
}

//////////////// Account ///////////////////////////////////

// Login
message CS_HuolongLoginRequest{
	option (msg_code) = 10101001;
	LoginType type = 1;
	string user_id = 2;
	string user_password = 3;
	string account_auth = 4;
	string auto_login_auth = 5;
}

message SC_HuolongLoginResponse{
	option (msg_code) = 10101002;
	int32 result = 1;	// 0: normal, others: error code
	string message = 2;
	string auto_login_auth = 3;
	string user_uid = 4;
}

// Logout
message CS_HuolongLogoutRequest{
	option (msg_code) = 10101011;
	string auto_login_auth = 1;
}

message SC_HuolongLogoutResponse{
	option (msg_code) = 10101012;
	int32 result = 1;	// 0: normal, others: error code
	string message = 2;
}

////////////////// User Info //////////////////////////////////

message ST_HuolongPlayerInfo {
	string user_uid = 1;
	string nickname = 2;
	string avatar_url = 3;
}

message CS_HuolongChangeUserInfoRequest{
	option (msg_code) = 10101021;
	string user_uid = 1;
	string nick_name = 2;
	string avatar_url = 3;
}

message SC_HuolongChangeUserInfoResponse{
	option (msg_code) = 10101022;
	int32 result = 1;	// 0: normal, others: error code
	string message = 2;
}

////////////////// Table Resolve //////////////////////////////////

message ST_HuolongRoomInfo {
	int32 room_number = 1;
	string creator_uid = 2;
	HuolongGameType type = 3;
	ST_HuolongPlayerInfo self_player = 4;
	ST_HuolongPlayerInfo next_player = 5;
	ST_HuolongPlayerInfo friend_player = 6;
	ST_HuolongPlayerInfo back_player = 7;
	HuolongStatus status = 8;
}

message CS_HuolongCreateTableRequest{
	option (msg_code) = 10101101;
	HuolongGameType type = 1;
}

message SC_HuolongCreateTableResponse {
	option (msg_code) = 10101102;
	bool result = 1;
	string message = 2;
	ST_HuolongRoomInfo room_info = 3;
}

message CS_HuolongEnterTableRequest {
	option (msg_code) = 10101111;
	int32 room_number = 1;
}

message SC_HuolongEnterTableResponse {
	option (msg_code) = 10101112;
	bool result = 1;
	string message = 2;
	ST_HuolongRoomInfo room_info = 3;
}

message SC_HuolongNoticeRoomInfo {
	option (msg_code) = 10100001;
	ST_HuolongRoomInfo room_info = 1;
}

message SC_HuolongNoticeGameStart {
	option (msg_code) = 10100002;

}

////////////////// Game Running //////////////////////////////////

////////////////// Game Hall Notice //////////////////////////////////

////////////////// Game Activity //////////////////////////////////
