syntax = "proto3";

package ArmyAntMessage.System;

import "ArmyAntMessage/Common/base.proto";

// appid : 1

message CS_GetServerStatueRequest{
	option (msg_code) = 11001;
}

message SC_GetServerStatueResponse{
	option (msg_code) = 11002;
	int32 result = 1;	// 0: normal, others: error code
	string message = 2;
	int64 server_time = 3;
}

