syntax = "proto3";

package ArmyAntMessage.System;

import "ArmyAntMessage/Common/base.proto";

// appid : 0

enum ConversationStepType {
	Default = 0;
	NoticeOnly = 1;
	AskFor = 2;
	StartConversation = 3;
	ConversationStepOn = 4;
	ResponseEnd = 5;		// Used to end an asking or conversation
}

message SocketHeadExtend{
	option (msg_code) = 1;
	int64 app_id = 1;
	int32 message_code = 3;
	int32 conversation_code = 4;
	int32 conversation_step_index = 5;
	ConversationStepType conversation_step_type = 6;
}
